// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtTag Snap render AtTag -- props active 1`] = `
<view
  class="at-tag--normal at-tag--active at-tag"
>
  
  标签
  
</view>
`;

exports[`AtTag Snap render AtTag -- props circle 1`] = `
<view
  class="at-tag--normal at-tag--circle at-tag"
>
  
  标签
  
</view>
`;

exports[`AtTag Snap render AtTag -- props disabled 1`] = `
<view
  class="at-tag--normal at-tag--disabled at-tag"
>
  
  标签
  
</view>
`;

exports[`AtTag Snap render AtTag -- props name 1`] = `
<view
  class="at-tag--normal at-tag"
>
  
  标签
  
</view>
`;

exports[`AtTag Snap render AtTag -- props size 1`] = `
<view
  class="at-tag--small at-tag"
>
  
  标签
  
</view>
`;

exports[`AtTag Snap render AtTag -- props type 1`] = `
<view
  class="at-tag--normal at-tag--primary at-tag"
>
  
  标签
  
</view>
`;
